<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="characters">Персонажи</string>
    <string name="episodes">Эпизоды</string>
    <string name="location">Локации</string>
    <string name="image_of_the_character">Картинка персонажа</string>
    <string name="name">Имя:</string>
    <string name="species">Вид:</string>
    <string name="status">Статус:</string>
    <string name="gender">Пол:</string>
    <string name="error_data_loading_info">Ошибка загрузки данных, проверьте соединение с интернетом</string>
    <string name="reload">Перезагрузить</string>
    <string name="icon_search">Иконка поиска</string>
    <string name="search_character">Поиск персонажа</string>
    <string name="empty_input_character_error">Введите имя персонжа</string>
    <string name="latin_error">Только латинские буквы</string>
    <string name="holder_error">.</string>
    <string name="name_of_character">Имя персонажа</string>
    <string name="species_hint">Вид</string>
    <string name="status_hint">Статус</string>
    <string name="gender_hint">Пол</string>
    <string name="filter_characters">Фильтрация персонажей</string>
    <string name="alive">Живой</string>
    <string name="dead">Мёртвый</string>
    <string name="unknown">Неизвестно</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="genderless">Бесполый</string>
    <string name="apply">Применить</string>
    <string name="filters">Фильтры</string>
    <string name="reset_filters">Сбросить фильтры</string>
</resources>