<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/filterCharactersAppBarLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/filterCharactersToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/filter_characters_menu"
            app:navigationIcon="@drawable/icon_back"
            app:title="@string/filter_characters"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterCharactersAppBarLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filterCharactersTextInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/filter_characters_margin_top_item_linear"
            android:hint="@string/name_of_character"
            app:endIconDrawable="@drawable/icon_close"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filterCharactersTextInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filterCharactersTextInputLayoutSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/filter_characters_margin_top_item_linear"
            android:hint="@string/species_hint"
            app:endIconDrawable="@drawable/icon_close"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filterCharactersTextInputSpecies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/filter_characters_margin_top_item_linear"
            android:text="@string/status_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/filter_characters_text_size" />

        <RadioGroup
            android:id="@+id/filterCharactersRadioGroupStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/filter_characters_radio_group_margin_horizontal">

            <RadioButton
                android:id="@+id/filterCharactersRadioBtnAlive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/filter_characters_margin_top_item_linear"
                android:text="@string/alive" />

            <RadioButton
                android:id="@+id/filterCharactersRadioBtnDead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/filter_characters_margin_top_item_linear"
                android:text="@string/dead" />

            <RadioButton
                android:id="@+id/filterCharactersRadioBtnUnknownStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/filter_characters_margin_top_item_linear"
            android:text="@string/gender_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/filter_characters_text_size" />

        <RadioGroup
            android:id="@+id/filterCharactersRadioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/filter_characters_radio_group_margin_horizontal">

            <RadioButton
                android:id="@+id/filterCharactersRadioBtnMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/filterCharactersRadioBtnFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/filterCharactersRadioBtnGenderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genderless" />

            <RadioButton
                android:id="@+id/filterCharactersRadioBtnUnknownGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown" />

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filterCharactersBtnApply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/filter_characters_btn_apply_margin_horizontal"
        android:layout_marginBottom="@dimen/filter_characters_btn_apply_margin_bottom"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>